--- a/results_accessory_v3.Rmd
+++ b/results_accessory_v3.Rmd
@@ -20,7 +20,8 @@ source("scripts/functions.R")
         * If accessory costs decrease with increased RA, increasing RA yields compounding returns. 
 
 ##Summary of outcomes
-1. Total reproductive investment is the best correlate with total plant size (or growth investment)
+1. Total reproductive investment is the best correlate with total plant size (or growth investment)  
+2. Accessory costs are enormous across all species
 2. Plants with smaller seeds, smaller adult sizes, and higher seedset have lower accessory costs. It is mathematically plausable that the concept of "accessory costs" is not all that different from "seed set"
     * In other words, plants with higher seed set, have lower accessory costs due to calculations
     * Across  the 14 species, plants with larger adult size have lower seed set.
@@ -31,10 +32,34 @@ source("scripts/functions.R")
 4. Among reproducing individuals, bigger or older plants DO NOT have higher seedset, although more individuals become reproductively mature over time. 
     * Proportional pre-pollination costs also decrease with plant age in most species
 5. Species differ enormously in their relative investment in different reproductive tissue types
+6. Lower pre-pollination costs in plants with higher RA: 9 (of 14) species decrease the proportion of reproductive investment in "pre-pollination" tissues as their RA increases. in other words, they get better returns on investment the more they invest. (This is just a pattern within, not across, species)  
 
 ###Still thinking about
 1. Most analyses look at propagules and pre-pollination tissues, but allocation can be further divided - it would be interesting to look at proportion energy to aborted buds vs. flowers (I do know aborted buds decrease)
 
+###Looking at reproductive investment, total accessory tissue investment, and pre-pollination tissue investment  
+* Something needs fixing here, for there are points that have higher accesory investment than reproductive investment  
+* Also, don't think the results for PUTU and PILI are accurate  
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
+par(mfrow=c(1,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+plot(accessory_inv~ReproInv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)])
+abline(0,1)
+abline(-0.30103,1)
+abline(-1,1)
+text(120,350,"all RE to accessory tissues",srt=43)
+text(12000,720,"10% RE to accessory tissues",srt=43)
+text(5,1.5,"50%",srt=43)
+
+plot(prepollen_all_inv~accessory_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)])
+abline(0,1)
+abline(-0.30103,1)
+abline(-1,1)
+text(120,250,"all acc costs pre-pollination",srt=45)
+text(3000,180,"10% acc costs pre-pollination",srt=45)
+text(10,3,"50%",srt=45)
+legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+```
 
 ##Which measure of reproductive output best correlates with plant size or growth
 * Measuring total reproductive output has a much stronger correlation than investment in fruit weight or propagules
@@ -43,6 +68,7 @@ source("scripts/functions.R")
 * Note that each of these figures (and models) only includes individuals with non-zero investment in the reproductive pool plotted
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
+options(scipen=10)
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
 mod <- lm (log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
 plot(ReproInv~total_weight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
@@ -77,26 +103,23 @@ mod <- lm(log(seed_count)~species*accessory_per_seed,data=subset(SummaryInd,seed
 plot(seed_count~accessory_per_seed,SummaryInd, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="seed count",xlab="accessory costs per successful seed (mg)",cex=.9)
 words.bottom.left.logxy(mod)
 
-plot(seed_count~asin(sqrt(prop_accessory)),SummaryInd, log="y", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="proportion of reproduction to accessory tissues (asin)",cex=.9)
+plot(seed_count~(prop_accessory),SummaryInd, log="y", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="proportion of reproduction to accessory tissues",cex=.9)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 ```
-###Do accessory costs shift with seed size?
+  
+### Do accessory costs shift with seed size?
     * These plots presented using both accessory cost calculations
     
 Results:  
     - Larger-seeded species have higher accessory costs, as has been shown in other studies  
     - Also: "larger species" and species with lower seed set have higher accessory costs  
     - And: species with greater prepollination investment have higher accessory costs (since this is the majority of accessory costs for most species)  
-    - When all 4 variables put into a single model, regardless of "accessory cost" calculation, seedset always by far the most significant correlate   
-        * seed size is least frequently a correlate in models, although of course highly significant when analyzed on its own  
+    - When all 4 variables put into a single model, depending on lots of little changes, different factors (seedset, seed size, maxH-species, pre-pollination costs come out as have the best explanatory power) 
 
 Interpretation:  
     - Not sure one can separate the effect of plant size, seed set, seed size on what drive accessory costs  
     - the reason seed set is strongly correlated, is because if flowers are pollinated and develop into mature seeds, the individual plant ends up investing more energy in reproduction and that extra energy is being invested into propagules, reducing accessory costs.   
         * This is true at the species and individual level.  
-
-mod <- lm(log(accessory_per_seed)~(seedset)*log(prepollen_all_inv)*log(total_weight)*log(seed_size),data=subset(SummaryInd,seedset>0&prepollen_all_per_seed>0))
-summary(mod)
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(.7,1,0.3,0.3))
@@ -112,7 +135,7 @@ mod <- lm(log(seed_size)~asin(sqrt(prop_accessory_mean)),SummarySpp)
 plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",xlab="",cex=.9)
 words.bottom.right.logx(mod)
 points(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
-mtext("Seed size (mg)",1, outer=TRUE,cex=1.2)
+mtext("seed size (mg)",1, outer=TRUE,cex=1.2)
 
 
 #mod <- lm(log(total_weight)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
@@ -126,7 +149,7 @@ mod <- lm(log(total_weight_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
 plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",xlab="",cex=0.9)
 points(asin(sqrt(prop_accessory_mean))~total_weight_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
 words.bottom.right.logx(mod)
-mtext("Total plant weight (mg)",1, outer=TRUE,cex=1.2)
+mtext("total plant weight (mg)",1, outer=TRUE,cex=1.2)
 
 
 #mod <- lm(log(seedset)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
@@ -137,7 +160,7 @@ words.top.right.logxy(mod)
 
 #mod <- lm(log(seedset)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
 mod <- lm(log(seedset_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
-plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",cex=0.9)
+plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp[as.factor(species)],ylab="proportional accessory costs",xlab="",cex=0.9)
 legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 points(asin(sqrt(prop_accessory_mean))~seedset_mean,SummarySpp, pch=16,col=col.spp[as.factor(species)],cex=1.8)
 words.top.right.logx(mod)
@@ -167,9 +190,15 @@ mtext("pre-pollination costs (proportional)",1, outer=TRUE,cex=1.2)
 * In other words, patterns of accessory costs vs. seed size, plant size, etc come about due to the differential effect of bud, flower abortion across species  
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
-plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp[as.factor(species)],xlab="costs to make 1 seed (mg)",cex=1.2)
+plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp[as.factor(species)],xlab="costs to make 1 seed (mg)",ylab="seed size (mg)",cex=1.2)
 mod <- lm(seedcosts~seed_size, SummarySpp)
-words.bottom.right.logxy(mod)
+abline(0,1)
+abline(-1,1)
+abline(-2,1)
+text(5,6.5,srt=40,"no accessory costs")
+text(2.5,.35,srt=40,"90%")
+text(7,.1,srt=40,"accessory costs = 99%")
+words.top.left.logxy(mod)
 text(seed_size~seedcosts,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
 
 plot(seed_size~costs_per_seed,data=subset(SummarySpp),log="y",pch=16,col=col.spp[as.factor(species)],ylab="",xlab="proportional accessory costs, scaled by seed weight",cex=1.2)
@@ -178,7 +207,7 @@ mod <- lm(costs_per_seed~seed_size, SummarySpp)
 words.bottom.left.logy(mod)
 ```
 
-###Seedset,seed count by age, size, RA
+
 * Replotting the seedset data by age, showing that the correlation between seedset and accessory costs is not age related
 * At most, there are most "old" plants with very low seedset  
 * these plots only include individuals with some seedset, thereby ignoring most young plants
@@ -192,133 +221,81 @@ words.bottom.right.logxy(mod)
 legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
 ```
 
-* There is no overall shift in either seedset or proportional allocation to propagules with increasing RA  
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7,warning=FALSE}
-par(mfrow=c(1,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
+###Does increasing RA yield compounding returns in the form of higher seedset or increased propagule allocation?
+* NO - seedset and relative propagule investment do not increase with increasing RA 
+* Furthermore, looking within species  
+    - Not a single species shows an increase in prop_propagule with increasing RA  
+    - And for seedset vs RA, only HATE shows an increase, and HEPU a decrease  
+    - So no, there are no compounding benefits to increasing RA    
+    
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
+par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 mod <- lm(asin(sqrt(seedset))~asin(sqrt(RA)),data=subset(SummaryInd,seedset>0&seedset<1))
 plot(asin(sqrt(RA))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
 words.bottom.right(mod)
 
-
 mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), log="x", pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+words.bottom.right(mod)
+legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+
+mod <- lm(asin(sqrt(propagule_per_seed))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
+plot(asin(sqrt(RA))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp[as.factor(species)])
 words.bottom.right.logx(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 ```
 
-* Furthermore, looking within species  
-    - Not a single species shows an increase in prop_propagule with increasing RA  
-    - And for seedset vs RA, only HATE shows an increase, and HEPU a decrease  
-    - So no, there are no compounding benefits to increasing RA     
-    
-```{r, echo=FALSE,message=FALSE,fig.width=7, fig.height=7,warning=FALSE}
-yvar <- "RA_asin"
-xvar <- "seedset"
+###Does increasing overall reproductive investment yield compoinding returns in the form of higher seedset or increased propagule allocation?  
+* Not within species - as total reproductive investment increases there are no within species shifts with respect to seed set, proportional propagule allocation, or propagule allocation per seed
+* Plotting all data shows the between species effect - that species with larger adult plants have lower seedset and proportional propagule investment  
+* the third plot shows scatter for species where some (or all) individuals have actual seeds weighed, but not for species that really just have a mean seed weight plugged in for all individuals
 
-data <- subset(SummaryInd,seedset>0)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(x[[yvar]] ~  asin(sqrt(x[[xvar]]))))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-
-results
-```
-
-* And there are absolutely no patterns of interest relative to seed count   
-    * it doesn't even correlate very well with RA or plant size
-
-###Relationship between tissue allocation and reproductive investment
-* these data also tell the story of seedset being an important "component" and being lower in bigger species
-* Proportion pre-pollination costs completely unrelated to reproductive investment
-* However, proportional investment in propagules decreases with increasing reproductive investment, because the bigger species investment more overall in reproduction and less in propagules
-* There is also no pattern with respect to proportional investment in packaging and dispersal (R^2=0, p-value=0.959) and a slight decrease in aborted post-pollination tissues with increasing reproductive investment (R^2=0.0661, p-value=0.0002)
-```{r, echo=FALSE,message=FALSE, ,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
-mod <- lm(log(ReproInv)~(prop_prepollen_all),data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1))
-plot((prop_prepollen_all)~ReproInv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
-words.top.right.logx(mod)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-
-options(scipen=5)
-mod <- aov(log(ReproInv)~species*log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
-summary(mod)
-
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
+par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
-mod <- lm(log(ReproInv)~species*log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
-plot(prop_propagule~ReproInv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Propagules (as proportion repro inv)")
-words.top.right.logxy(mod)
-mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
-```
+mod <- lm(asin(sqrt(seedset))~log(ReproInv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((ReproInv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+words.bottom.right.logy(mod)
 
-###What happens against RA
-* Overall RA is correlated with reproductive investment and age
-* These plots only include individuals that have some reproductive investment
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(0.3,0.3,0.1,0.3), mai=c(1.1,1,0.3,0.3)) 
-mod <- lm(log(RA)~log((ReproInv)),data=subset(SummaryInd,RA>0))
-plot(RA~(ReproInv),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy")
-words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+mod <- lm(asin(sqrt(prop_propagule))~log(ReproInv),data=subset(SummaryInd,prop_propagule>0))
+plot((ReproInv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+words.bottom.right.logy(mod)
+legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(log(RA)~species*age*log((ReproInv)),data=subset(SummaryInd,RA>0))
-anova(mod)
-
-mod <- lm(log(RA)~log((age)),data=subset(SummaryInd,RA>0))
-plot(RA~(age),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="")
+mod <- lm(log(propagule_per_seed)~log(ReproInv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((ReproInv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp[as.factor(species)])
 words.bottom.right.logxy(mod)
 ```
 
-* RA is also correlated with count of floral units - the total number of buds produced (i.e. final development stage can be buds, flowers, aborted fruit or fruit)
-* This is true for many individual species as well as across species
+###Does seedset or allocation to propagules shift with prop_maxH?
+* Not within species - looked at within species regressions for prop_maxH against seedset, prop_propagule, propagule_per_seed and no consistent patterns  
+* However there is a strong across species effect, such that species where more of the reproducing individuals have lower "prop_maxH" have higher seed set vs. the opposites  
+* This indicates that species that begin reproducing at smaller sizes have higher seedset  
+    * We already knew that individuals from species with shorter Hmax and individuals that are overall shorter have higher seedset  
+    * In part this is suggetsing that the species with high seedset have, on average, mostly individuals that are much 
+      shorter than the maxH achieved and that reproduction is curtailing their growth even more than maxH_spp indicates 
 
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
-mod <- lm(log(RA)~log(repro_all_count),data=subset(SummaryInd,repro_all_count>0))
-plot(repro_all_count~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of buds produced",xlab="")
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-words.bottom.right.logxy(mod)
-mtext("RA",1, outer=TRUE,cex=1.1)
-```
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
+par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
+options(scipen=20)
+mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(asin(sqrt(seedset))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+words.bottom.right(mod)
 
-```{r, echo=FALSE,message=FALSE,fig.width=28, fig.height=28}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "repro_all_count"
-xvar <- "RA_asin"
+mod <- lm(log(height)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(asin(sqrt(seedset))~(height),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="x")
+words.bottom.right.logx(mod)
 
-data <- subset(SummaryInd, repro_all_count>0)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm((log(x[[yvar]])) ~  (x[[xvar]])))
-results <- summarise_all_fits(lmfits)
+mod <- lm((prop_maxH)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,prop_propagule>0))
+plot(asin(sqrt(prop_propagule))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+words.bottom.right(mod)
+legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-
-results
-
-for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",
-                    main=spp)
-    }
+mod <- lm((prop_maxH)~log(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((propagule_per_seed)~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), log="y",pch=16,col=col.spp[as.factor(species)])
+words.bottom.right.logy(mod)
 ```
 
 ###What causes the correlation between RA and plant size (or total reproductive investment)?
-* Do plants invest equally more in all reproductive tissues as they get bigger or do they increase allocation to certain types of reproductive tissues more than others?
-
-* If they shifted their proportional investment, there would be a relationship between RA and the proportional investment in 1 (or more) of the 5 reproductive energy pools. If they do not shift their proportional investment, all 5 would have no relationship.  
-      * Only "proportional energy to pre-pollination aborted tissues" shows a significant decline with increasing RA - and it has a very convincing decline.   
-      * Since no other pool shows an increase in proportional investment, that extra energy must be distributed fairly randomly across other pools
-
-* Simultaneously, all tissue pools should show a positive relationship between actual investment amounts (mg) and RA  
-      * However, only "pre-pollination successful tissues" and "energy to propagules" have a convincing r-squared value (across all species)  
-
-* It might be interesting to look at this pattern by species
-
 ```{r, echo=FALSE,message=FALSE,fig.width=12, fig.height=30}
 par(mfrow=c(5,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
@@ -365,95 +342,64 @@ plot(asin(sqrt(prop_postpollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_pos
 words.bottom.left.logx(mod)
 ```
 
+### Looking at the same patterns against maxH  
 
+```{r, echo=FALSE, message=FALSE, fig.width=12, fig.height=36}
+par(mfrow=c(6,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
-* Plants that invest more in some reproductive tissues, on average, invest more in other reproductive tissues, so have a higher RA
+mod <- lm((prop_maxH)~log((ReproInv)),data=subset(SummaryInd,prop_maxH>0&ReproInv>0))
+plot(ReproInv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&ReproInv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="total reproductive investment (mg)")
+words.bottom.right.logy(mod)
 
-  * This same pattern is true just looking  at energy invested in pre-pollination tissues and at propagule allocation
+mod <- lm((prop_maxH)~asin(sqrt(RA)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(RA))~prop_maxH,data=subset(SummaryInd,prop_maxH>0),pch=16,col=col.spp[as.factor(species)],ylab="RA")
+words.bottom.left(mod)
 
+mod <- lm((prop_maxH)~log((propagule_inv)),data=subset(SummaryInd,prop_maxH>0&propagule_inv>0))
+plot(propagule_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="energy to propagules (mg)")
+words.bottom.right.logy(mod)
 
-* Plants with higher RA have lower allocation to pre-pollination tissues, probably because of their higher seedset
-* Relationship between RA and proportion energy to propagules simply shows a species effect - different species have different RA values and different proportional propagule investment
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
-par(mfrow=c(2,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-mod <- lm(log(RA)~log((prepollen_all_inv)),data=subset(SummaryInd,RA>0&prepollen_all_inv>0))
-plot(prepollen_all_inv~(RA),data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination tissues (mg)")
-words.bottom.right.logxy(mod)
+mod <- lm((prop_maxH)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(prop_propagule))~prop_maxH,data=subset(SummaryInd,prop_maxH>0),pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
+words.bottom.left(mod)
 
+mod <- lm((prop_maxH)~log((prepollen_aborted_inv)),data=subset(SummaryInd,prop_maxH>0&prepollen_aborted_inv>0))
+plot(prepollen_aborted_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&prepollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="y",ylab="pre-pollination aborted tissues (mg)")
+words.bottom.right.logy(mod)
+
+mod <- lm((prop_maxH)~asin(sqrt(prop_prepollen_aborted)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(prop_prepollen_aborted))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
+words.bottom.left(mod)
+
+mod <- lm((prop_maxH)~log((prepollen_success_inv)),data=subset(SummaryInd,prop_maxH>0&prepollen_success_inv>0))
+plot(prepollen_success_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&prepollen_success_inv>0), pch=16,col=col.spp[as.factor(species)],log="y",ylab="pre-pollination successful tissues (mg)")
+words.bottom.right.logy(mod)
+
+mod <- lm((prop_maxH)~asin(sqrt(prop_prepollen_success)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(prop_prepollen_success))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
+words.bottom.left(mod)
+
+mod <- lm((prop_maxH)~log((packaging_dispersal_inv)),data=subset(SummaryInd,prop_maxH>0&packaging_dispersal_inv>0))
+plot(packaging_dispersal_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&packaging_dispersal_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="energy to packaging and dispersal (mg)")
+words.bottom.right.logy(mod)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-mod <- lm(log(RA)~log((propagule_inv)),data=subset(SummaryInd,RA>0&propagule_inv>0))
-plot(propagule_inv~(RA),data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to propagules (mg)")
-words.bottom.right.logxy(mod)
 
-mod <- lm(asin(sqrt(RA))~asin(sqrt(prop_prepollen_all)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0))
-plot(asin(sqrt(prop_prepollen_all))~asin(sqrt(RA)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination tissues (as proportion repro inv) (asin)")
-words.top.right(mod)
+mod <- lm((prop_maxH)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(prop_packaging_dispersal))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)],ylab="packaging and dispersal (as proportion repro inv)")
+words.bottom.left(mod)
 
-mod <- lm(log(RA)~log((prop_propagule)),data=subset(SummaryInd,RA>0&prop_propagule>0))
-plot((prop_propagule)~(RA),data=subset(SummaryInd,RA>0&prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
-words.bottom.left.logxy(mod)
-```
+mod <- lm((prop_maxH)~log((postpollen_aborted_inv)),data=subset(SummaryInd,prop_maxH>0&postpollen_aborted_inv>0))
+plot(postpollen_aborted_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&postpollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="energy to tissues aborted postpollination (mg)")
+words.bottom.right.logy(mod)
 
-###Shifts across age and height
-* Seedset shows a slight decrease with proportional plant height (the best proxy for "relative size")  
-    * this pattern likely exists because species that begin reproducing at shorter proportional heights have higher seedset  
-    * only LEES shows a significant decline
-
-* the same analysis can be done on seedset by age, with similar response    
-    * Only HEPU, LEES show significant decline
-    
-yvar <- "seedset"
-xvar <- "prop_maxH""
-```{r, echo=FALSE,message=FALSE}
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset<1&seedset>0))
-plot(asin(sqrt(seedset))~prop_maxH,data=subset(SummaryInd,seedset<1&seedset>0), pch=16,col=col.spp[as.factor(species)])
-words.top.right(mod)
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-
-yvar <- "seedset"
-xvar <- "prop_maxH"
-
-data <- subset(SummaryInd, seedset>0&seedset<1)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  (x[[xvar]])))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-
-results
-```
-
-yvar <- "prop_propagule"
-xvar <- "total_weight"
-
-* Only EPMI shows a decline in prop propagule with increasing plant weight  
-* No species show an increase in prop propagule with increasing plant weight  
-* Of course the proportion of species with prop propagule > 0 increases with plant size
-
-```{r, echo=FALSE,message=FALSE}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "prop_propagule"
-xvar <- "total_weight"
-
-data <- subset(SummaryInd,prop_propagule>0)
-data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  log(x[[xvar]])))
-results <- summarise_all_fits(lmfits)
-
-results$r.squared <- round(results$r.squared,digits=3)
-results$p.value <- round(results$p.value,digits=3)
-results$a <- round(results$a,digits=2)
-results$b <- round(results$b,digits=2)
-
-results
+mod <- lm((prop_maxH)~asin(sqrt(prop_postpollen_aborted)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(prop_postpollen_aborted))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)],ylab="tissues aborted postpollination (as proportion repro inv)")
+words.bottom.left(mod)
 ```
 
 ##Shifts in proportion to tissue types across species  
-- Reasonably idiosyncratic patterns
+- Reasonably idiosyncratic patterns  
+- Species very different in which accessory tissues they invest the most in - which reflects the differences in basic structure (i.e. Banksia cones), but also more subtlely that some species abort lots of buds (pre-pollination aborted), while other species abort more fully formed flowers   
 - COER, EPMI, LEES, PILI invest the most energy in propagules  
 - HATE invests by far the least into propagules  
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=28}
@@ -534,66 +480,3 @@ se1 <- tmp2$se
 
 se_function(mean1,se1)
 ```
-
-```{r, echo=FALSE, message=FALSE, fig.width=12, fig.height=36}
-par(mfrow=c(6,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-
-mod <- lm((prop_maxH)~log((ReproInv)),data=subset(SummaryInd,prop_maxH>0&ReproInv>0))
-plot(ReproInv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&ReproInv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="total reproductive investment (mg)")
-words.bottom.right.logy(mod)
-
-mod <- lm((prop_maxH)~asin(sqrt(RA)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(RA))~prop_maxH,data=subset(SummaryInd,prop_maxH>0),pch=16,col=col.spp[as.factor(species)],ylab="RA")
-words.bottom.left(mod)
-
-mod <- lm((prop_maxH)~log((propagule_inv)),data=subset(SummaryInd,prop_maxH>0&propagule_inv>0))
-plot(propagule_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="energy to propagules (mg)")
-words.bottom.right.logy(mod)
-
-mod <- lm((prop_maxH)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(prop_propagule))~prop_maxH,data=subset(SummaryInd,prop_maxH>0),pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
-words.bottom.left(mod)
-
-mod <- lm((prop_maxH)~log((prepollen_aborted_inv)),data=subset(SummaryInd,prop_maxH>0&prepollen_aborted_inv>0))
-plot(prepollen_aborted_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&prepollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="y",ylab="pre-pollination aborted tissues (mg)")
-words.bottom.right.logy(mod)
-
-mod <- lm((prop_maxH)~asin(sqrt(prop_prepollen_aborted)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(prop_prepollen_aborted))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
-words.bottom.left(mod)
-
-mod <- lm((prop_maxH)~log((prepollen_success_inv)),data=subset(SummaryInd,prop_maxH>0&prepollen_success_inv>0))
-plot(prepollen_success_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&prepollen_success_inv>0), pch=16,col=col.spp[as.factor(species)],log="y",ylab="pre-pollination successful tissues (mg)")
-words.bottom.right.logy(mod)
-
-mod <- lm((prop_maxH)~asin(sqrt(prop_prepollen_success)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(prop_prepollen_success))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
-words.bottom.left(mod)
-
-mod <- lm((prop_maxH)~log((packaging_dispersal_inv)),data=subset(SummaryInd,prop_maxH>0&packaging_dispersal_inv>0))
-plot(packaging_dispersal_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&packaging_dispersal_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="energy to packaging and dispersal (mg)")
-words.bottom.right.logy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-
-mod <- lm((prop_maxH)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(prop_packaging_dispersal))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)],ylab="packaging and dispersal (as proportion repro inv)")
-words.bottom.left(mod)
-
-mod <- lm((prop_maxH)~log((postpollen_aborted_inv)),data=subset(SummaryInd,prop_maxH>0&postpollen_aborted_inv>0))
-plot(postpollen_aborted_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&postpollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="energy to tissues aborted postpollination (mg)")
-words.bottom.right.logy(mod)
-
-mod <- lm((prop_maxH)~asin(sqrt(prop_postpollen_aborted)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(prop_postpollen_aborted))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp[as.factor(species)],ylab="tissues aborted postpollination (as proportion repro inv)")
-words.bottom.left(mod)
-```
-
-#Shifts in accessory costs across species and ages
-##Overall results
-- Of course there is also a correlation between seed size and plant size, but actually not as strong as the accessory cost one, presumably because older plants have lower accessory costs as well as species that are inherently bigger  
-  
-- A number of species show fairly consistent declines in accessory costs with various measures of "bigger", including size, age, RA. Other species show no patterns  
-- Lower pre-pollination costs in plants with higher RA: 9 (of 14) species decrease the proportion of reproductive investment in "pre-pollination" tissues as their RA increases. in other words, they get better returns on investment the more they invest. (This is just a pattern within, not across, species)  
-- Species very different in which accessory tissues they invest the most in - which reflects the differences in basic structure (i.e. Banksia cones), but also more subtlely that some species abort lots of buds (pre-pollination aborted), while other species abort more fully formed flowers  
-- Haven't actually run all the tests, but assume all reproductive tissue types will differ in proportional allocation across species
-- For most of the statistical analyses, the youngest site has been removed, since it included individuals that were harvested while flowering (and therefore never "got to" set fruit) and automatically have no "successful" reproduction. There are of course some individuals like this at other ages as well, but far fewer  
