--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -7,12 +7,19 @@ source("scripts/functions.R")
 ```
 
 ##Summary  
-
-
-##1. RA schedules, RV curves, and VV curves across all species
-
-
-
+1. RA shifts across species and, on average, increases with increasing age  
+2. Plots of RA and investment against proportion maxH show  
+    * COER, EPMI, GRBU, HATE, PELA show decent curves; BOLE, GRSP, HEPU, LEES, PHPH have noisier curves  
+    * different species show predictable increase in repro vs. veg investment with size, once reproductively mature  
+    * all species show predictable increase in veg investment before reproductive maturity
+3. Plants that allocate more to reproduction (higher RA) have lower growth  
+    * pattern holds against proportional increase in shoot diameter or stem diameter, both across and within species  
+    * pattern also true against RGR, but probably less biologically relevent  
+4. PCA indicates variables that explain more across vs. within species shifts  
+    * against relative growth vs. RA (and absolute reproduction) important (age related effect)  
+    * species separated by size, WD, LMA, seedsize  
+    * 3rd and 4th axes finetune parts of these patterns, in particular separating canopy species from others  
+5. Overall, data set shows increasing RA with age (despite messay RA schedules) and differences across species in community  
 
 ##1. RA shifts enormously across species  
 * There is also an age effect, with increasing RA with age
@@ -58,18 +65,21 @@ text(170,2.4,srt=45,"RA = 0.01")
     * BOLE, COER, EPMI, GRSP, HATE, LEES, sort-of PHPH show consistent increase in reproductive investment with increasing size
     * BAER, GRSP, HATE, HEPU, PEPU, PHPH, PUTU, and sort-of BOLE, COER, EPMI show a consistent increase in vegetative investment with size
 * Not surprisingly, COER, EPMI and HATE which have some of the best regressions for both RV and VV-curves have the cleanest RA schedules
-* if VV-curves plotted including non-reproducing individuals, get beautiful curves - wonderfully consistent when young, but becoming scattered once reproducing
+* if VV-curves plotted including non-reproducing individuals, get beautiful curves - wonderfully consistent when young, but becoming scattered once reproducing  
     ***it would be nice to plot the VV-curves, with different colors for reproducing and non-reproducing individuals***
 
-###RA curves by species
+###RA curves by species  
+* curves here plotted against prop_maxH, not total weight, because on average "cleaner"  
+    * take account for inter-site discrepencies in plant weight, that don't seem to affect plant height or reproductive maturity as much  
+
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "RA"
-xvar <- "total_weight"
+xvar <- "prop_maxH"
 
 data <- subset(SummaryInd,RA>0)
 data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  (log(x[[xvar]]))))
+lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  ((x[[xvar]]))))
 results <- summarise_all_fits(lmfits)
 
 results$r.squared <- round(results$r.squared,digits=3)
@@ -78,12 +88,13 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
                     main=spp,col=col.age[as.factor(data[[spp]]$age)])
 }
 
 mtext("RA", 2, outer=TRUE,cex=1.2)
-mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
+mtext("proportion maximum H", 1, outer=TRUE,cex=1.2)
+legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ###RV curves by species
@@ -103,17 +114,19 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.4,
                     main=spp,col=col.age[as.factor(data[[spp]]$age)])
 }
 
 mtext("Reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
+legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
 ```
 
 ###Vegetative invesment by size curves by species, only including reproducing individuals  
-* colored by age, but legend not correct, because "age 1" color used for youngest age with reproducing individuals
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7.5}
+* colored by age, but legend not correct, because "age 1" color used for youngest age with reproducing individuals  
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "GrowthInv"
 xvar <- "total_weight"
@@ -129,16 +142,22 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
                     main=spp,col=col.age[as.factor(data[[spp]]$age)])
 }
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
+legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
 ```
-###Vegetative invesment by size curves by species, including all individuls
-* 
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
+
+###Vegetative invesment by size curves by species, including all individuls  
+* at younger ages, species follow very predictable growth curves  
+* Once reproductively mature, plants no longer following predictable vegetative investment vs. size  
+    ***What does this mean in terms of models?*** 
+* If these plots were colored by age, they would show that the 5-year old site has somewhat stunted plants (site used for "young plants" by growth project)
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "GrowthInv"
 xvar <- "total_weight"
@@ -154,20 +173,21 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",
-                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
+                    main=spp,col=col.mature[as.factor(data[[spp]]$mature)])
 }
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
+legend("topleft",legend=names(labels.mature),col=col.mature,pch=16, cex=1.1,bty="n")
 ```
 
-##3. RA is a population level parameter, so noise expected across individuals
+####RA is a population level parameter, so noise expected across individuals
 * None of these species is known to mast, but of course environmental variation year-to-year
 * Within a population, some individuals invest more or less in repro in a given year, but overall population should change with time
 * This indicates it is informative to consider site level means - which would show an increase in RA with age in many species
   
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=28, fig.height=28}
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(1,.9,.4,0.2)) 
 yvar <- "RA"
 xvar <- "age"
@@ -176,7 +196,7 @@ data <- subset(SummaryInd,RA>0)
 data <- split(data, data$species)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",xlab="",ylab="", cex=1.3,
                     main=spp,xlim=c(1,35))
 }
 
@@ -184,3 +204,274 @@ mtext("RA", 1, outer=TRUE,cex=1.2)
 mtext("age", 2, outer=TRUE,cex=1.2)
 ```
 
+###3. Plants that allocate more to reproduction (higher RA) have lower growth
+* When plotted again stem diameter increment, most species show a distinct trade-off 
+* The pattern is weaker for growth in shoot diameter
+* There is also a very distinct correlation across individuals of all species
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
+par(mfrow=c(1,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,1.1,.4,0.2)) 
+plot(asin(sqrt(RA))~growth_stem_diam,data=subset(SummaryInd,RA>0),log="x",col=col.spp[as.factor(species)], pch=16)
+mod <- lm(log(growth_stem_diam)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
+words.top.right.logx(mod)
+legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=0.8,bty="n")
+
+plot(asin(sqrt(RA))~growth_shoot_diam,data=subset(SummaryInd,RA>0),log="x",col=col.spp[as.factor(species)], pch=16)
+mod <- lm(log(growth_shoot_diam)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
+words.top.right.logx(mod)
+```
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+yvar <- "RA"
+xvar <- "growth_stem_diam"
+
+data <- subset(SummaryInd,RA>0)
+data <- split(data, data$species)
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
+                    main=spp,col=col.age[as.factor(data[[spp]]$age)])
+}
+
+mtext("Stem diameter growth", 1, outer=TRUE,cex=1.2)
+mtext("RA", 2, outer=TRUE,cex=1.2)  
+legend("bottomleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+```
+    
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+yvar <- "RA"
+xvar <- "growth_shoot_diam"
+    
+data <- subset(SummaryInd,RA>0)
+data <- split(data, data$species)
+    
+for(spp in names(data)) {
+plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",cex=1.4, xlab="",ylab="",
+                        main=spp,col=col.age[as.factor(data[[spp]]$age)])
+}
+
+mtext("Shoot diameter growth", 1, outer=TRUE,cex=1.2)
+mtext("RA", 2, outer=TRUE,cex=1.2)  
+legend("bottomleft",legend=names(labels.age),col=col.age,pch=16, cex=1.1,bty="n")
+```
+
+   
+###4. PCA analysis also indicates a decline in growth/increasing age with increasing RA - as well as species level differences
+* Axis 2 groups a collection of variables indicating increased reproduction; opposite these is relative diameter growth  
+    * I have removed RGR from the PCA and added in a scaled stem diameter measure  
+    * Although RGR and "Stem diameter increment" have a similar negative correlation with RA, 
+    RGR created a much easer to describe PCA - it fell out wonderfully opposite RGR and orthogonal to 
+    WD, seedsize, LMA, total plant size  
+    
+* Orthoganal to these in WD vs. maxH, LMA_mean, seed_size, and shoot_growth - species that are taller as adults have bigger seeds, higher LMA, and greater shoot growth (both stem growth & leaf count), independent of their current (age dependent) size
+
+* I interpret this to mean that the three traits (Hmax, LMA, WD) are strongly correlated and shift predictably across the species; confirms that I have selected a wide range of species from the community
+
+*** this analysis doesn't include accessory proportions, because then I have to use subset of reproducing individuals, greatly reducing sample size. Including these variables, doesn't change the basic story.***
+
+```{r, echo=FALSE,message=FALSE,fig.width=7, fig.height=7}
+par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
+SummaryIndPCA <- SummaryInd %>%
+  filter(lvs_end_total>0&shoot_leaf_area>0&shoot_leaf_area_growth!=0) %>%
+  select(prop_maxH,height,maxH_spp,WD_mean,LMA_mean,seed_size,growth_leaf,
+         growth_stem_diam,leaf_area,growth_shoot_diam,growth_stem_area,lvs_end_total,total_weight,
+         RA,seedset,repro_all_count,accessory_inv,propagule_inv,shoot_leaf_area,shoot_leaf_area_growth,scaled_growth_stem_diam)
+
+SummaryIndPCA$leaf_area <- log((SummaryIndPCA$leaf_area)+.001)
+SummaryIndPCA$total_weight <- log(SummaryIndPCA$total_weight)
+SummaryIndPCA$height <- log(SummaryIndPCA$height)
+SummaryIndPCA$maxH_spp <- log(SummaryIndPCA$maxH_spp)
+SummaryIndPCA$seed_size <- log(SummaryIndPCA$seed_size)
+SummaryIndPCA$accessory_inv <- log(SummaryIndPCA$accessory_inv+.001)
+SummaryIndPCA$propagule_inv <- log(SummaryIndPCA$propagule_inv+.001)
+SummaryIndPCA$growth_shoot_diam <- log(SummaryIndPCA$growth_shoot_diam+.001)
+SummaryIndPCA$growth_leaf <- log(SummaryIndPCA$growth_leaf+10000)
+SummaryIndPCA$repro_all_count <- log(SummaryIndPCA$repro_all_count+1)
+SummaryIndPCA$lvs_end_total <- log(SummaryIndPCA$lvs_end_total)
+SummaryIndPCA$growth_stem_diam <- log(SummaryIndPCA$growth_stem_diam)
+SummaryIndPCA$shoot_leaf_area <- log(SummaryIndPCA$shoot_leaf_area)
+SummaryIndPCA$shoot_leaf_area_growth <- log(SummaryIndPCA$shoot_leaf_area_growth)
+SummaryIndPCA$scaled_growth_stem_diam <- log(SummaryIndPCA$scaled_growth_stem_diam)
+SummaryIndPCA$RA <- asin(sqrt(SummaryIndPCA$RA))
+
+PCA_mod <- prcomp(SummaryIndPCA, scale=TRUE)
+summary(PCA_mod)
+biplot(PCA_mod,xlim=c(-.1,.15),ylim=c(-.15,.1),cex=.8)
+
+PCA_loadings <- as.data.frame(PCA_mod$rotation)
+PCA_loadings$variables <- row.names(PCA_loadings)
+
+PCA_scaling <- as.data.frame(PCA_mod$scale)
+PCA_scaling$variables <- row.names(PCA_scaling)
+names(PCA_scaling) <- c("scale","variables")
+PCA_loadings <- merge(PCA_loadings,PCA_scaling,by="variables")
+
+PCA_lambda <- as.data.frame(PCA_mod$sdev)
+
+PCA_scores <- as.data.frame(PCA_mod$x)
+PCA_scores$individual <- subset(SummaryInd$individual, SummaryInd$lvs_end_total>0&SummaryInd$shoot_leaf_area_growth!=0)
+SummaryInd_PCA_results <- merge(SummaryInd,PCA_scores, by="individual", all.x=TRUE)
+
+n <- NROW(PCA_scores)
+scale =1
+
+PCA_lambda <- PCA_lambda*sqrt(n)
+PCA_lambda <- PCA_lambda^scale
+
+SummaryInd_PCA_results$PC1_scale <- SummaryInd_PCA_results$PC1/PCA_lambda[1]
+SummaryInd_PCA_results$PC2_scale <- SummaryInd_PCA_results$PC2/PCA_lambda[2]
+SummaryInd_PCA_results$PC3_scale <- SummaryInd_PCA_results$PC3/PCA_lambda[3]
+SummaryInd_PCA_results$PC4_scale <- SummaryInd_PCA_results$PC4/PCA_lambda[4]
+PCA_loadings$PC1_scale <- PCA_loadings$PC1 / 4.5
+PCA_loadings$PC2_scale <- PCA_loadings$PC2 / 4.5
+PCA_loadings$PC3_scale <- PCA_loadings$PC3 / 4.5
+PCA_loadings$PC4_scale <- PCA_loadings$PC4 / 4.5
+
+SummaryInd_PCA_results <-SummaryInd_PCA_results %>%
+  filter(complete.cases(SummaryInd_PCA_results$PC1_scale))
+
+SummaryInd_PCA_results <-SummaryInd_PCA_results %>%
+  filter(complete.cases(SummaryInd_PCA_results$PC2_scale))
+
+SummaryInd_PCA_results <-SummaryInd_PCA_results %>%
+  filter(complete.cases(SummaryInd_PCA_results$PC3_scale))
+
+SummaryInd_PCA_results <-SummaryInd_PCA_results %>%
+  filter(complete.cases(SummaryInd_PCA_results$PC4_scale))
+
+PCA_by_species <- SummaryInd_PCA_results %>%
+  group_by(species) %>%
+summarise_each(funs(mean, se), PC1_scale, PC2_scale, PC3_scale, PC4_scale)
+
+PCA_by_age <- SummaryInd_PCA_results %>%
+group_by(age) %>%
+summarise_each(funs(mean, se), PC1_scale, PC2_scale, PC3_scale, PC4_scale)
+```
+
+####PCA axis 1 is across species  
+* it explains 34% of the variance  
+* it separates species with high wood density (WD_mean), seedset, RA versus species with large total size, high leaf area, high LMA, large seedsize etc
+* the age indepentent measures like prop_maxH and scaled_growth_stem_area have near-zero loadings
+* BAER, HATE have by far the highest loadings and BOLE, COER, EPMI, HEPU, LEES, PILI the lowest  
+* not sure why high wood density species also have high seedset - is this just by chance with my species?
+
+```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
+par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
+
+plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],xlim=c(-.1,.1))
+arrows(0, 0, (.8*PCA_loadings$PC2_scale), (.8*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+
+mean1 <- PCA_by_species$PC1_scale_mean
+se1 <- PCA_by_species$PC1_scale_se
+plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 1")
+se_function(mean1,se1)
+
+PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC1_scale))
+plot(PC1_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
+
+plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+legend("topright",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+
+mean1 <- PCA_by_age$PC1_scale_mean
+se1 <- PCA_by_age$PC1_scale_se
+plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 1")
+se_function(mean1,se1)
+```
+
+####PCA axis 2 is about age  
+* it explains 23% of the variance 
+* top variable loadings: shoot_leaf_area_growth and growth_shoot_diam vs repro_all_count, RA, prop_maxH - a collection of variables that shift fro each to late in life   
+* COER, EPMI,PELA, and PEPU have the higher loadings and BOLE, LEES have the lowest - to first order these differences are about the average age of reproducing individuals of each species
+```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
+par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
+
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+
+mean1 <- PCA_by_species$PC2_scale_mean
+se1 <- PCA_by_species$PC2_scale_se
+plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 2")
+se_function(mean1,se1)
+
+PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC2_scale))
+plot(PC2_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
+
+plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)])
+arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+
+mean1 <- PCA_by_age$PC2_scale_mean
+se1 <- PCA_by_age$PC2_scale_se
+plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 2")
+se_function(mean1,se1)
+```
+
+####PCA axis 3 again divides mainly by species
+* it explains 9% of the variance (total variance explained now at 68%)  
+* It is dividing the three (of 4) canopy species, HATE, PEPU, PELA, (BAER) versus
+* top variable loadings: scaled_growth_stem_diam, WD_mean,growth_stem_diam, lvs_end_total vs. maxH_spp, LMA_mean, seed_size, RA  
+* not terribly interpretable, since doesn't make sense that scaled_growth_stem_diam with WD_mean  
+
+```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
+par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
+
+plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],ylim=c(-.15,.15))
+arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(1.1*PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=.8,col="black")
+
+mean1 <- PCA_by_species$PC3_scale_mean
+se1 <- PCA_by_species$PC3_scale_se
+plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 3")
+se_function(mean1,se1)
+
+PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC3_scale))
+plot(PC3_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
+
+plot(PC3_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)],ylim=c(-.15,.15))
+arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(1.1*PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+
+mean1 <- PCA_by_age$PC3_scale_mean
+se1 <- PCA_by_age$PC3_scale_se
+plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 2")
+se_function(mean1,se1)
+```
+
+####PCA axis 4  
+* it explains 7% of the variance (total variance explained now at 74%)
+* it divides stem vs shoot growth variables  
+* high loadings for growth_stem_area, growth_leaf, LMA_mean, seed_set vs low loadings for shoot_leaf_area_growth, WD_mean, prop_maxH, seed_size  
+* BAER, EPMI, HATE and HEPU have higher values vs. BOLE, GRBU, GRSP with lower values; in a sense these later species have more shoot growth than stem growth and spend more of their life close to their maxH - which is true  
+* there is no significant age component  
+```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
+par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
+
+plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)],ylim=c(-.15,.15))
+arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+
+mean1 <- PCA_by_species$PC4_scale_mean
+se1 <- PCA_by_species$PC4_scale_se
+plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 4",ylim=c(-.05,.06))
+se_function(mean1,se1)
+
+PCA_loadings <- transform(PCA_loadings,variables=reorder(variables,-PC4_scale))
+plot(PC4_scale~as.factor(variables),PCA_loadings,cex.axis=.8,las=3,xlab="")
+
+plot(PC4_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age[as.factor(age)],ylim=c(-.15,.15))
+arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
+text(1.1*PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
+
+mean1 <- PCA_by_age$PC4_scale_mean
+se1 <- PCA_by_age$PC4_scale_se
+plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 2")
+se_function(mean1,se1)
+```
