--- a/results_growth.Rmd
+++ b/results_growth.Rmd
@@ -414,20 +414,20 @@ text(GrowthInv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=speci
 - There is a positive correlation with the maximum height the species reaches at a given age -i.e. fast growing young plants are tall when young.  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(GrowthInv_mean ~ maxH_spp,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age==1.4))
+plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ maxH_spp,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age==2.4))
+plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(GrowthInv_mean ~ maxH_spp,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age>3))
+plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 legend("topleft",col=col.age,labels.age,pch=16, bty="n")
 
@@ -571,14 +571,14 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 SummaryIndPCA <- SummaryInd %>%
   filter(lvs_end_total>0&shoot_leaf_area>0&shoot_leaf_area_growth!=0) %>%
-  select(prop_maxH,height,maxH_spp,WD_mean,LMA_mean,seed_size,growth_leaf,
+  select(prop_maxH,height,maxH,WD_mean,LMA_mean,seed_size,growth_leaf,
          RGR,leaf_area,growth_shoot_area,growth_stem_area,lvs_end_total,total_weight,
          RA,seedset,repro_all_count,accessory_inv,propagule_inv,shoot_leaf_area,shoot_leaf_area_growth)
 
 SummaryIndPCA$leaf_area <- log((SummaryIndPCA$leaf_area)+.001)
 SummaryIndPCA$total_weight <- log(SummaryIndPCA$total_weight)
 SummaryIndPCA$height <- log(SummaryIndPCA$height)
-SummaryIndPCA$maxH_spp <- log(SummaryIndPCA$maxH_spp)
+SummaryIndPCA$maxH <- log(SummaryIndPCA$maxH)
 SummaryIndPCA$seed_size <- log(SummaryIndPCA$seed_size)
 SummaryIndPCA$accessory_inv <- log(SummaryIndPCA$accessory_inv+.001)
 SummaryIndPCA$propagule_inv <- log(SummaryIndPCA$propagule_inv+.001)
@@ -727,13 +727,13 @@ text(PC3_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex
 * PC1 is still WD vs lots of growth variables, but now absolute measures of reproductive investment (propagule_inv and accessory_inv) associate with absolute "big size" not high RA
 * PC2 is RA, seedset, and prop_propagule vs. RGR, shoot growth variables and prop_accessory; not surprising that prop_propagule and prop_accessory pulled to opposite ends
 * PC3 is somewhat similar. It is also prop_accessory and prop_maxH vs seed set and prop_propagule, but it now separates out all the shoot growth values
-* PC4 is now the axis that separates LMA_mean and maxH vs. WD_mean, with variables like maxH_spp pulling toward all the "big size" arrows
+* PC4 is now the axis that separates LMA_mean and maxH vs. WD_mean, with variables like maxH pulling toward all the "big size" arrows
 
 ```{r, echo=FALSE,message=FALSE,fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 SummaryIndPCA <- SummaryInd %>%
   filter(lvs_end_total>0&accessory_inv>0&shoot_leaf_area_growth!=0) %>%
-  select(prop_maxH,height,maxH_spp,WD_mean,LMA_mean,seed_size,growth_leaf,
+  select(prop_maxH,height,maxH,WD_mean,LMA_mean,seed_size,growth_leaf,
          RGR,leaf_area,growth_shoot_area,growth_stem_area,lvs_end_total,total_weight,
          RA,seedset,repro_all_count,accessory_inv,propagule_inv,shoot_leaf_area,shoot_leaf_area_growth,
          prop_propagule, prop_accessory)
@@ -741,7 +741,7 @@ SummaryIndPCA <- SummaryInd %>%
 SummaryIndPCA$leaf_area <- log((SummaryIndPCA$leaf_area)+.001)
 SummaryIndPCA$total_weight <- log(SummaryIndPCA$total_weight)
 SummaryIndPCA$height <- log(SummaryIndPCA$height)
-SummaryIndPCA$maxH_spp <- log(SummaryIndPCA$maxH_spp)
+SummaryIndPCA$maxH <- log(SummaryIndPCA$maxH)
 SummaryIndPCA$seed_size <- log(SummaryIndPCA$seed_size)
 SummaryIndPCA$accessory_inv <- log(SummaryIndPCA$accessory_inv+.001)
 SummaryIndPCA$propagule_inv <- log(SummaryIndPCA$propagule_inv+.001)
@@ -815,17 +815,17 @@ anova(mod)
 glance(mod)[1]
 
 
-mod <- lm(RGR~asin(sqrt(RA))+prop_maxH+log(propagule_inv+1)+log(accessory_inv+1)+log(total_weight)+log(repro_all_count+1)+WD_mean+LMA_mean+maxH_spp,SummaryInd)
+mod <- lm(RGR~asin(sqrt(RA))+prop_maxH+log(propagule_inv+1)+log(accessory_inv+1)+log(total_weight)+log(repro_all_count+1)+WD_mean+LMA_mean+maxH,SummaryInd)
 anova(mod)
 glance(mod)[1]
 ```
 
 * another of the interesting pattern is that the increase in shoot area of leaders is correlated with maxH and seed_size (and opposite WD_mean) and somewhat offset from whole plant growth measures and whole plant size measures  
-* seed_size removed, because no additional explanatory power after WD and maxH_spp included
+* seed_size removed, because no additional explanatory power after WD and maxH included
 
 
 ```{r, echo=FALSE,message=FALSE}
-mod <- lm(log(growth_shoot_area)~log(maxH_spp)+WD_mean+log(growth_stem_area)+log(total_weight)+RGR+asin(sqrt(RA))+LMA_mean,SummaryInd)
+mod <- lm(log(growth_shoot_area)~log(maxH)+WD_mean+log(growth_stem_area)+log(total_weight)+RGR+asin(sqrt(RA))+LMA_mean,SummaryInd)
 anova(mod)
 glance(mod)
 ```
@@ -837,18 +837,18 @@ plot(mod)
 -
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
-plot(WD_mean~maxH_spp,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
-mod <- lm(log(maxH_spp)~WD_mean,SummaryInd)
+plot(WD_mean~maxH,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
+mod <- lm(log(maxH)~WD_mean,SummaryInd)
 words.bottom.left.logx(mod)
 
-plot(WD_mean~maxH_spp,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"), log="x",col=col.spp[as.factor(species)],pch=16)
-mod <- lm(log(maxH_spp)~WD_mean,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"))
+plot(WD_mean~maxH,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"), log="x",col=col.spp[as.factor(species)],pch=16)
+mod <- lm(log(maxH)~WD_mean,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"))
 words.bottom.left.logx(mod)
 
 plot(seedset_mean~total_weight_mean,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
 mod <- lm(log(total_weight_mean) ~ (seedset_mean),SummarySpp)
 words.bottom.left.logx(mod)
 
-plot(seedset_mean~maxH_spp,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
-mod <- lm(log(maxH_spp) ~ (seedset_mean),SummarySpp)
+plot(seedset_mean~maxH,SummarySpp, log="x",col=col.spp[as.factor(species)],pch=16)
+mod <- lm(log(maxH) ~ (seedset_mean),SummarySpp)
 words.bottom.left.logx(mod)
