--- a/Accessory_figs.rmd
+++ b/Accessory_figs.rmd
@@ -28,8 +28,8 @@ is idiosyncratic across species
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 options(scipen=10)
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
-mod <- lm (log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot(ReproInv~total_weight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+mod <- lm (log(total_weight)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
+plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
@@ -54,7 +54,7 @@ mtext("Total plant size (mg)",1, outer=TRUE,cex=1.2)
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7.5}
 par(mfrow=c(1,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
-plot(accessory_inv~ReproInv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)],
+plot(accessory_inv~repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)],
      xlim=c(1,700000),ylim=c(1,700000),xlab="Total reproductive investment (mg)",ylab="Investment in accessory tissues (mg)")
 abline(0,1)
 abline(-0.30103,1)
@@ -177,17 +177,17 @@ words.bottom.right.logx(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
-mod <- lm(asin(sqrt(seedset))~log(ReproInv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((ReproInv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+mod <- lm(asin(sqrt(seedset))~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
 words.bottom.right.logy(mod)
 
-mod <- lm(asin(sqrt(prop_propagule))~log(ReproInv),data=subset(SummaryInd,prop_propagule>0))
-plot((ReproInv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+mod <- lm(asin(sqrt(prop_propagule))~log(repro_inv),data=subset(SummaryInd,prop_propagule>0))
+plot((repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
 words.bottom.right.logy(mod)
 legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(log(propagule_per_seed)~log(ReproInv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((ReproInv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp[as.factor(species)])
+mod <- lm(log(propagule_per_seed)~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp[as.factor(species)])
 words.bottom.right.logxy(mod)
 ```
 
@@ -222,7 +222,7 @@ words.bottom.right.logy(mod)
 
 
 ###5. What influences the correlation between RA and plant size (or total reproductive investment)?
-  ***Don't trust anything until I know RA and ReproInv are correct, because PHPH and PUTU have huge influence on patterns***
+  ***Don't trust anything until I know RA and repro_inv are correct, because PHPH and PUTU have huge influence on patterns***
 ```{r, echo=FALSE,message=FALSE,fig.width=12, fig.height=30,warning=FALSE}
 par(mfrow=c(5,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
@@ -324,7 +324,7 @@ mtext("species",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2)) 
 tmp <- SummaryInd %>%
-  filter(ReproInv!=0&age>3) %>%
+  filter(repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_prepollen_all)
 
@@ -338,7 +338,7 @@ se1 <- tmp$se
 se_function(mean1,se1)
 
 tmp2 <- SummaryInd %>%
-  filter(ReproInv!=0&age>3) %>%
+  filter(repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_packaging_dispersal)
 
