--- a/errors_to_fix.rmd
+++ b/errors_to_fix.rmd
@@ -7,14 +7,14 @@ source("scripts/functions.R")
 ```
 
 ###Problem.  
-* There are two problems with the calculation of PEPU cones. I discovered this, because there were a few plants, especially PEPU_802, with huge ReproInv relative to repro_all_count  
+* There are two problems with the calculation of PEPU cones. I discovered this, because there were a few plants, especially PEPU_802, with huge repro_inv relative to repro_all_count  
 * Looking at various data sources I discovered that the estimated FD (Final Development) parts weights for those cones were much too big, for PEPU_802 more than 10x too big  
 * In addition, for PEPU_802 and PEPU_807 the aborted cones were actually collected and marked as "to use" in the flower parts data, but aren't being used
 * I've looked at Konrad's scripts and can't immediately see what would be wrong
     
 ```{r}
-plot(ReproInv~repro_all_count,data=subset(SummaryInd, repro_all_count>0&species=="PEPU"),log="xy")
-text(ReproInv~repro_all_count,data=subset(SummaryInd, repro_all_count>0&species=="PEPU"),labels=individual, pos=1,offset=.6,cex=0.8,col="black")
+plot(repro_inv~repro_all_count,data=subset(SummaryInd, repro_all_count>0&species=="PEPU"),log="xy")
+text(repro_inv~repro_all_count,data=subset(SummaryInd, repro_all_count>0&species=="PEPU"),labels=individual, pos=1,offset=.6,cex=0.8,col="black")
 
 check_FD <-as.data.frame(PEPU_Investment[3])
 check_FD_aborted <- subset(check_FD,FD.what=="cone_aborted")
@@ -96,11 +96,11 @@ text(dia~leaf_weight,data=subset(check,segment==1&age>5),labels=individual,cex=.
 * The first plot below shows that there are individuals where absolute investment in accessory tissues is larger than total reproductive investmen* There are two different sources of reproductive investment, one which comes from the file "accessory" and is the sum of all the different accessory tissues and one which comes from the dataframe "investment". The "investment" variant is what is currently being used, but not sure which one should be being used
 * They are quite different from each other
 ```{r, echo=FALSE, message=FALSE, fig.width=7, fig.height=7}
-plot(accessory_inv~ReproInv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)])
+plot(accessory_inv~repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)])
 abline(0,1)
 text(120,350,"all RE to accessory tissues",srt=45)
 
-plot(investment$ReproInv~accessory$total_repro_inv,log="xy",pch=16,col=col.spp[as.factor(investment$species)])
+plot(investment$repro_inv~accessory$total_repro_inv,log="xy",pch=16,col=col.spp[as.factor(investment$species)])
 ```
 
 ###Todo.  
