--- a/results_RAschedules_shorter.Rmd
+++ b/results_RAschedules_shorter.Rmd
@@ -12,7 +12,7 @@ source("scripts/functions.R")
 * Below are curves plotted relative to "prop_maxH", which is a better fit for most species - but other species should be plotted against total plant weight  
 * Plants that grow more also reproduce more, but plants that allocate more to reproduction have lower RGR 
 * There is a disinct decline in RGR (or Growth Investment) at the exact "prop_maxH" that plants begin to reproduce 
-* Plotting reproductive investment (ReproInv) against RGR yields a much lower r^2 - for every single species. Only RA captures the actual trade-off incurred by plants that allocate more to reproduction, showing one way RA schedules are important  
+* Plotting reproductive investment (repro_inv) against RGR yields a much lower r^2 - for every single species. Only RA captures the actual trade-off incurred by plants that allocate more to reproduction, showing one way RA schedules are important  
 - As discussed in the review, RA schedule differentiate between greater reproductive output because you are bigger (a positive correlation with plant growth) and greater reproductive output because you are allocating more to reproduction (a negative correlation with plant growth)  
 * RV curves continue to be the more relevent metric to determine the actual amount of reproductive output produced by a plant of a given size or height  
 
@@ -27,18 +27,18 @@ source("scripts/functions.R")
 ###Plots of size against reproductive investment
 * Plots of total reproductive investment against size or height are both highly significant
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
-mod <- lm(log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot(ReproInv~total_weight, SummaryInd, log="xy",col=col.spp[as.factor(species)],pch=16)
+mod <- lm(log(total_weight)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
+plot(repro_inv~total_weight, SummaryInd, log="xy",col=col.spp[as.factor(species)],pch=16)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(height)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot(ReproInv~height, SummaryInd, log="xy",col=col.spp[as.factor(species)],pch=16)
+mod <- lm(log(height)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
+plot(repro_inv~height, SummaryInd, log="xy",col=col.spp[as.factor(species)],pch=16)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
-mod <- lm((prop_maxH)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot((ReproInv)~(prop_maxH), SummaryInd, log="y",col=col.spp[as.factor(species)],pch=16,xlim=c(4e-03,1))
+mod <- lm((prop_maxH)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
+plot((repro_inv)~(prop_maxH), SummaryInd, log="y",col=col.spp[as.factor(species)],pch=16,xlim=c(4e-03,1))
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 ```
 
@@ -48,17 +48,17 @@ legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
-mod <- lm(log(total_weight)~asin(sqrt(RA)), data=subset(SummaryInd,ReproInv>0))
+mod <- lm(log(total_weight)~asin(sqrt(RA)), data=subset(SummaryInd,repro_inv>0))
 plot(asin(sqrt(RA))~total_weight, SummaryInd, log="x",col=col.spp[as.factor(species)],pch=16)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.top.right.logx(mod)
 
-mod <- lm(log(height)~asin(sqrt(RA)), data=subset(SummaryInd,ReproInv>0))
+mod <- lm(log(height)~asin(sqrt(RA)), data=subset(SummaryInd,repro_inv>0))
 plot(asin(sqrt(RA))~height, SummaryInd, log="x",col=col.spp[as.factor(species)],pch=16)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.top.right.logx(mod)
 
-mod <- lm((prop_maxH)~asin(sqrt(RA)), data=subset(SummaryInd,ReproInv>0))
+mod <- lm((prop_maxH)~asin(sqrt(RA)), data=subset(SummaryInd,repro_inv>0))
 plot((asin(sqrt(RA)))~(prop_maxH), SummaryInd,col=col.spp[as.factor(species)],pch=16,xlim=c(4e-03,1))
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right(mod)
@@ -133,13 +133,13 @@ results
 
 ###RV curves, by age, weight and height
 ```{r, echo=FALSE,message=FALSE, warning=FALSE, fig.width=21, fig.height=7}
-yvar <- "ReproInv"
+yvar <- "repro_inv"
 xvar <- "age"
 
-yvar2 <- "ReproInv"
+yvar2 <- "repro_inv"
 xvar2 <- "total_weight"
 
-yvar3 <- "ReproInv"
+yvar3 <- "repro_inv"
 xvar3 <- "height"
 
 data <- SummaryInd
@@ -158,7 +158,7 @@ for(spp in names(data)) {
 
 * Reproductive investment vs. height for each species
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
-yvar <- "ReproInv"
+yvar <- "repro_inv"
 xvar <- "height"
 
 data <- SummaryInd
@@ -176,7 +176,7 @@ results
 
 * Reproductive investment vs. weight for each species
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
-yvar <- "ReproInv"
+yvar <- "repro_inv"
 xvar <- "total_weight"
 
 data <- SummaryInd
@@ -199,8 +199,8 @@ results
 
 ```{r, echo=FALSE,message=FALSE}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
-mod <- lm(log(GrowthInv)~log(ReproInv),data=subset(SummaryInd,ReproInv>0))
-plot((1+ReproInv)~GrowthInv, SummaryInd, log="xy", col=col.spp[as.factor(species)],pch=16)
+mod <- lm(log(growth_inv)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
+plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.spp[as.factor(species)],pch=16)
 legend("bottomright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 ```
@@ -224,13 +224,13 @@ words.top.right.logxy(mod)
 ** Once I have leaf weights, I'll be curious how leaf weight plots against prop_maxH, this might be more of the story  
 
 ###Looking jointly at effects of RA and prop_maxH on growth inveestment
-- Model analyzed is: lm(log([[GrowthInv]]) ~  asin(sqrt([[RA]]))*asin(sqrt([[prop_maxH]]))))  
+- Model analyzed is: lm(log([[growth_inv]]) ~  asin(sqrt([[RA]]))*asin(sqrt([[prop_maxH]]))))  
 - The canopy species have, not suprisingly, a very obvious maxH, with Growth Investment or RGR tapering markedly at the maxH is approached. In these species growth investment is poorly correlated with RA, but well correlated with height.  
 - In some of the mid-height species (GRSP, BOLE, GRBU), growth investment is very poorly correlated with height, but better correlated with RA - in other words, increased RA = less growth.  
 - One of the difficult features interpreting this, is that there are species with overall higher correlations and overall lower correlations, and this pattern dominates, not the relative strength  
 - My current analyses still lack the ability to tease apart the most obvious pattern - because I don't actually want to show that growth and height are correlated, so much as that the   asymptoting of growth is correlated with height - i.e. the change in slope of the relationship.  
 ```{r, echo=FALSE, message=FALSE}
-yvar <- "GrowthInv"
+yvar <- "growth_inv"
 xvar <- "RA"
 x2var <- "prop_maxH"
 
