--- a/results_accessory_shorter.Rmd
+++ b/results_accessory_shorter.Rmd
@@ -40,8 +40,8 @@ source("scripts/functions.R")
 
 ```{r, echo=FALSE,message=FALSE,,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
-mod <- lm (log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot(ReproInv~total_weight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+mod <- lm (log(total_weight)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
+plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
@@ -212,13 +212,13 @@ mtext("Seed set",1, outer=TRUE,cex=1.1)
 * There is also no pattern with respect to proportional investment in packaging and dispersal (R^2=0, p-value=0.959) and a slight decrease in aborted post-pollination tissues with increasing reproductive investment (R^2=0.0661, p-value=0.0002)
 ```{r, echo=FALSE,message=FALSE, ,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
-mod <- lm(log(ReproInv)~(prop_prepollen_all),data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1))
-plot((prop_prepollen_all)~ReproInv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
+mod <- lm(log(repro_inv)~(prop_prepollen_all),data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1))
+plot((prop_prepollen_all)~repro_inv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
 words.top.right.logx(mod)
 legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
  
-mod <- lm(log(ReproInv)~log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
-plot(prop_propagule~ReproInv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Propagules (as proportion repro inv)")
+mod <- lm(log(repro_inv)~log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
+plot(prop_propagule~repro_inv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Propagules (as proportion repro inv)")
 words.top.right.logxy(mod)
 mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
 ```
@@ -228,12 +228,12 @@ mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
 * These plots only include individuals that have some reproductive investment
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.3,0.3,0.1,0.3), mai=c(1.1,1,0.3,0.3)) 
-mod <- lm(log(RA)~log((ReproInv)),data=subset(SummaryInd,RA>0))
-plot(RA~(ReproInv),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy")
+mod <- lm(log(RA)~log((repro_inv)),data=subset(SummaryInd,RA>0))
+plot(RA~(repro_inv),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy")
 words.bottom.right.logxy(mod)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(log(RA)~species*age*log((ReproInv)),data=subset(SummaryInd,RA>0))
+mod <- lm(log(RA)~species*age*log((repro_inv)),data=subset(SummaryInd,RA>0))
 anova(mod)
 
 mod <- lm(log(RA)~log((age)),data=subset(SummaryInd,RA>0))
@@ -436,7 +436,7 @@ mtext("species",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2)) 
 tmp <- SummaryInd %>%
-  filter(ReproInv!=0&age>3) %>%
+  filter(repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_prepollen_all)
 
@@ -450,7 +450,7 @@ se1 <- tmp$se
 se_function(mean1,se1)
 
 tmp2 <- SummaryInd %>%
-  filter(ReproInv!=0&age>3) %>%
+  filter(repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_packaging_dispersal)
 
