--- a/results_growth.Rmd
+++ b/results_growth.Rmd
@@ -94,10 +94,10 @@ for(spp in names(data)) {
  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.8,0.3,.5,0.2), mai=c(.7,1,.1,0.2))
-plot((GrowthInv~prop_maxH), SummaryInd, log="y", col=col.spp[as.factor(species)],pch=16,xlab="")
+plot((growth_inv~prop_maxH), SummaryInd, log="y", col=col.spp[as.factor(species)],pch=16,xlab="")
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-plot(GrowthInv~prop_maxH, SummaryInd, log="y", col=col.age[as.factor(age)],pch=16,ylab="",xlab="")
+plot(growth_inv~prop_maxH, SummaryInd, log="y", col=col.age[as.factor(age)],pch=16,ylab="",xlab="")
 legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
 mtext("proportion Hmax", 1, outer=TRUE,cex=1.2)
 ```
@@ -105,7 +105,7 @@ mtext("proportion Hmax", 1, outer=TRUE,cex=1.2)
 ### Growth investment by Proportion Hmax
 ```{r, echo=FALSE, message=FALSE, fig.width=21, fig.height=21}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
-yvar <- "GrowthInv"
+yvar <- "growth_inv"
 xvar <- "prop_maxH"
 data <- SummaryInd
 data <- split(data, data$species)
@@ -404,9 +404,9 @@ words.bottom.right.logxy(mod)
 - The same basic relationship exists across all ages, so combined all data here  
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(GrowthInv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
+plot(growth_inv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
 legend("topleft",col=col.age, labels.age, pch=16, cex=1,bty="n")
-text(GrowthInv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
+text(growth_inv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
 ```
 
 ### Species with greater maximum height have higher growth rates
@@ -414,20 +414,20 @@ text(GrowthInv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=speci
 - There is a positive correlation with the maximum height the species reaches at a given age -i.e. fast growing young plants are tall when young.  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ maxH, data=subset(SummarySppAge,age>3))
+plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 legend("topleft",col=col.age,labels.age,pch=16, bty="n")
 
@@ -440,20 +440,20 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - However there is no relationship in younger plants  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(GrowthInv_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.left.logxy(mod)
 
-plot(GrowthInv_mean ~ WD_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.left.logxy(mod)
 legend("topright",col=col.age,labels.age,pch=16, bty="n")
 
-plot(GrowthInv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age>3))
 words.bottom.left.logxy(mod)
 
 mtext("wood density",1,outer=TRUE)
@@ -481,20 +481,20 @@ mtext("RGR",2,outer=TRUE)
 ### Leaf area vs growth investment
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(GrowthInv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings",ylim=c(100,50000))
-text(GrowthInv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings",ylim=c(100,50000))
+text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings",ylim=c(100,100000))
-text(GrowthInv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings",ylim=c(100,100000))
+text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(GrowthInv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults",ylim=c(100,1000000))
-text(GrowthInv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==7), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults",ylim=c(100,1000000))
+text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==7), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 legend("topleft",col=col.age,labels.age,pch=16, bty="n")
 
@@ -509,25 +509,25 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - But relationship in adults disappears when HATE is removed...
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 legend("topright",col=col.age,labels.age,pch=16, bty="n")
 
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3&species!="HATE"),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"))
+plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3&species!="HATE"),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"))
 words.bottom.right.logxy(mod)
 
 mtext("LMA",1,outer=TRUE)
@@ -539,19 +539,19 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - And just barely a significant relationship between RGR and leaflifespan for adult plants
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2))
-plot(GrowthInv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(GrowthInv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(log(LL_death_mean)~log(GrowthInv_mean), data=subset(SummarySppAge,age==1.4))
+plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(log(LL_death_mean)~log(growth_inv_mean), data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(GrowthInv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(GrowthInv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
-plot(GrowthInv_mean ~ LL_death_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(GrowthInv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(GrowthInv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3))
 legend("topright",col=col.age,labels.age,pch=16, bty="n")
 words.bottom.right.logxy(mod)
 
